<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_detail"
    tools:context=".presentation.detail.PokemonDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_pokemon_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/inner_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inner_constraint_layout"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_constraint_layout"
        style="@style/ConstraintCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="100dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="50dp"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_pokemon_number"
            tools:text="Pikachu" />

        <TextView
            android:id="@+id/tv_pokemon_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_name"
            app:layout_constraintEnd_toStartOf="@+id/tv_pokemon_name"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="#1" />

        <TextView
            android:id="@+id/tv_type_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="type center" />

        <TextView
            android:id="@+id/tv_type_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/line"
            app:layout_constraintTop_toTopOf="@+id/tv_type_left"
            tools:text="type 2" />

        <TextView
            android:id="@+id/tv_type_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/line"
            app:layout_constraintBottom_toTopOf="@+id/line"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            tools:text="type 1" />

        <View
            android:id="@+id/line"
            android:layout_width="2dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textViewStatsLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewStatsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/base_stats"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_hp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_attack"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hp" />

        <TextView
            android:id="@+id/tv_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="3dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_attack"
            app:layout_constraintStart_toEndOf="@+id/tv_hp_label" />

        <TextView
            android:id="@+id/tv_attack_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_defense"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/attack" />

        <TextView
            android:id="@+id/tv_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_defense"
            app:layout_constraintStart_toEndOf="@+id/tv_attack_label" />

        <TextView
            android:id="@+id/tv_defense_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_special_attack"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/defense" />

        <TextView
            android:id="@+id/tv_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_special_attack"
            app:layout_constraintStart_toEndOf="@+id/tv_defense_label" />

        <TextView
            android:id="@+id/tv_special_attack_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_special_defense"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/special_attack" />

        <TextView
            android:id="@+id/tv_special_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_special_defense"
            app:layout_constraintStart_toEndOf="@+id/tv_special_attack_label" />

        <TextView
            android:id="@+id/tv_special_defense_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_speed"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/spdef" />

        <TextView
            android:id="@+id/tv_special_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_speed"
            app:layout_constraintStart_toEndOf="@+id/tv_special_defense_label" />

        <TextView
            android:id="@+id/tv_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/spd"/>

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_speed_label" />

        <ImageView
            android:id="@+id/iv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_weight"
            app:layout_constraintBottom_toTopOf="@+id/tv_weight"
            app:layout_constraintEnd_toStartOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/line"
            app:layout_constraintEnd_toStartOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_weight"
            tools:text="100.0 kg" />

        <ImageView
            android:id="@+id/iv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_height"
            app:layout_constraintBottom_toTopOf="@+id/tv_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line"
            app:layout_constraintTop_toTopOf="@+id/line"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/iv_height"
            tools:text="2.0 m" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>